syntax = "proto3";
package jack139.artchain.person;

option go_package = "github.com/jack139/artchain/x/person/types";

import "gogoproto/gogo.proto";

message User {
  string creator = 1;
  uint64 id = 2;
  string recType = 3; 
  string name = 4; 
  string userType = 5; 
  string userInfo = 6; 
  string status = 7; 
  string regDate = 8; 
  string chainAddr = 9; 
  string lastDate = 10;
}
